tests/invalid/Function_Invalid_3.whiley
method f(int x, int y) -> int:
    return x + y

method g() -> int:
    return f(1)
